# BootCamp

./: info.txt
day1/assignment1/: assignment1.cpp
day1/assignment2/: assignment2.cpp
day1/bonus/: bonus.cpp
day2/: ProperHelloWorld.cpp
day2/assignment1/: assigment1_1.cpp  assignment1.cpp
day2/assignment2/: assignment2.cpp
day2/bonus/: bonus.cpp
day3/assignment1/: assignment1.h  main_assignment1.cpp  servicerecord.cpp  supportclasses.cpp  supportclasses.h
day4/assignment1/: classes.cpp  include.h  main.cpp
day5/assignment1/: classes.cpp  include.h  main.cpp  templates.h
day5/assignment2/: main.cpp  main_solution1.cpp  main_solution2.cpp
day5/assignment3/: main.cpp
day5/bonus/: file1.txt  file2.txt  main.cpp
day6/assignment1/: include.h  main.cpp
day6/assignment2/: include.h  main.cpp
day6/bonus/: include.h  main.cpp
day7/assignment1/: Makefile
day7/assignment1/include/: classes.h  include.h
day7/assignment1/src/: classes.cpp  main.cpp
day7/assignment2/: CMakeLists.txt
day7/assignment2/include/: vehicleFunctions.h
day7/assignment2/src/: main.cpp
day7/bonus/: CMakeLists.txt
day7/bonus/src/: main.cpp
day8/assignment1/: github.txt
day8/assignment2/: fetchProjectBuildAndRun.sh  fetchProjectBuildAndRunv2.sh
day8/bonus1/: fetchAndChange.sh
day8/bonus2/: CMakeLists.txt
day8/bonus2/data/: dump
day9/assignment1/: 1.cpp
day9/assignment2/: CMakeLists.txt
day9/assignment2_class/: CMakeLists.txt
day9/bonus/: info.txt
templates/project_template_cmake/: CMakeLists.txt
templates/project_template_make/: Makefile
(+18 files in other folders)
