cmake_minimum_required(VERSION 3.5.1)
project(Assignment2)
include_directories(include)
set(SOURCE_DIR src/)
add_library(vf SHARED ${SOURCE_DIR}vehicleFunctions.cpp)
#add_library(vf STATIC ${SOURCE_DIR}vehicleFunctions.cpp) 
add_executable(main ${SOURCE_DIR}main.cpp)
target_link_libraries(main vf)
add_dependencies(main vf)