cmake_minimum_required(VERSION 3.5.1)
project(myProject)
include_directories(include)
set(SOURCE_DIR src/)
#add_library(MyLIB SHARED ${SOURCE_DIR}mylib.cpp)
#add_library(MyLIB STATIC ${SOURCE_DIR}mylib.cpp) 
add_executable(main ${SOURCE_DIR}main.cpp)
#target_link_libraries(main mylib)
#add_dependencies(main mylib)